adding filtering parameters

--- a/parameters.config
+++ b/parameters.config
@@ -1,4 +1,4 @@
-rawfastqpath="Fastq"
+rawfastqpath="/mnt/d/genome/parents/P2/2020_19/"
 genome_reference_name="Brara_Chiifu_V3.5.fa.gz"
 genome_reference_path="gen_refs"
 genome_url="http://39.100.233.196:82/download_genome/Brassica_Genome_data/Brara_Chiifu_V3.5/Brara_Chiifu_V3.5.fa.gz"
@@ -7,11 +7,12 @@ genome_url="http://39.100.233.196:82/download_genome/Brassica_Genome_data/Brara_
 # quality parameters
 fastpqualitypath="quality_results"
 fastpqualityreportpath="quality_report"
-fastqextention=".fastq.gz"
+fastqextention=".fq.gz"
+#fastqextention=".fastq.gz"
 ncharactersforparing=2
 
 # mapping parameters
-mappingpath="mapping_results"
+mappingpath="mappingtmp"
 mappingreportpath="mapping_reports"
 
 # gvcf parameters
@@ -27,3 +28,9 @@ samplenameref="Sample1"
 #total chromosomes
 chrn=10
 chrsuffix="A"
+
+# vcf filtering
+vcfsummaryresults="vcf_def"
+maf=0.05
+mxmissing=10
+minmeanDP=10,20,30,40
